# projeto-tech-challenge-churn

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  makefile  mlflow.db  pyproject.toml  requirements.txt
data/: Telco_customer_churn.xlsx  Telco_customer_cuhrn_preprocessed.csv
data/processed/: churn.sqbpro  dataset_tratado.parquet
data/raw/: Telco_customer_churn.xlsx
docs/: arquitetura.md  documento.md  model_canvas_business.md  model_card.md  plano_de_monitoramento.md  results.md
docs/arquitetura/: arquitetura_projeto_churn_batch.drawio
modelo/: modelo_baseline_regressao_logistica.ipynb  modelo_predicao_churn.ipynb
modelo/mlruns/1/models/m-7956063df5cb46568dd3dba9e5991629/artifacts/: MLmodel  (+1 more)
models/: best_mlp_model.pt  best_model.pt  preprocessor.pkl
notebooks/: EDA.ipynb  analise_EDA.ipynb  analise_teste_hipotese.ipynb  best_mlp_model.pt  classificacao_dummy_classifier.ipynb  modelo_baseline_regressao_logistica.ipynb  modelo_mlp.ipynb  modelos_baseline.ipynb
notebooks/mlruns/1/5a12ac82a5864af19afbee082850a243/artifacts/: feature_importance_table.csv
notebooks/outputs/: classification_report.txt
notebooks/outputs/decision_tree/: classification_report.txt  preprocessador.pkl
notebooks/outputs/dummy/: classification_report_dummy.txt  feature_names.json
notebooks/outputs/mlp/: best_mlp_model.pt  classification_report.txt  feature_names.json  preprocessador.pkl
notebooks/outputs/rf/: classification_report.txt
notebooks/outputs/rl/: classification_report.txt  feature_names.json  preprocessador.pkl
notebooks/outputs_dt/: classification_report.txt
notebooks/outputs_rf/: classification_report.txt
notebooks/reports/: classification_report.txt
src/: app.py  evaluate.py  ingest.py  motor_batch.py  pipeline.py  preprocess.py  preprocessing.py  train.py  utils.py
tests/: test_app.py  test_preprocess.py
(+79 files in other folders)
