[project]
name = "projeto-tech-challenge-churn"
version = "0.1.0"
dependencies = [
    "mlflow==3.3.2",
    "cloudpickle==3.1.1",
    "lz4==4.4.5",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "psutil==7.0.0",
    "pyarrow==21.0.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"